// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu Is hidden 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c1 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
}

<ul
  class="c0"
  data-testid="menu-list"
  hidden=""
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
    >
      Option A
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
    >
      Option B
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
    >
      Option C
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
    >
      Option D
    </a>
  </li>
</ul>
`;

exports[`NavMenu Matches the snapshot 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c1 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
}

<ul
  class="c0"
  data-testid="menu-list"
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
    >
      Option A
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
    >
      Option B
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
    >
      Option C
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
    >
      Option D
    </a>
  </li>
</ul>
`;
